@@ -1,3 +1,9 @@
+2004-03-22 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
+	(viewer::insert_shell):  Only build vector of vertices when
+	drawing shells with non-convex polygons.
+
 2004-03-21 Braden McDaniel  <braden@endoframe.com>
 
 	* test/node_interface_set.cpp:  Added some unit tests for
@@ -6,9 +12,10 @@
 2004-03-21 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/script.cpp
-	({anonymous}::js_::script::activate):  When converting the script
-	function arguments to jsvals, only add GC roots to garbage-collected
-	things; i.e., jsvals for which JSVAL_IS_GCTHING returns true.
+	({anonymous}::js_::script::activate):  When converting the
+	script function arguments to jsvals, only add GC roots to
+	garbage-collected things; i.e., jsvals for which
+	JSVAL_IS_GCTHING returns true.
 
 2004-03-20 Braden McDaniel  <braden@endoframe.com>
 
